# Associational_Biases

./: .env.example  .gitignore  CLAUDE.md  README.md  Reading.md  Roadmap.md  TODO.md  colab_runner.ipynb
inter-model communication pipeline/: image_gen.py  pyproject.toml
inter-model communication pipeline/utils/: description.py  initialisation.py
mitigation_pipeline/: bite_tune.py  demographic_slice.py  gradcam_lora.py  label_decoding.py  lora_describer.py  make_annotations.py  make_probe.py  paired_dataset.py  probe_acc.py  probe_paired.py  redaction.py  reorg_raf.py  run_week1.sh  train_consistency.py  week1_spike.ipynb
